--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,12 @@
 {
-  "extends": "astro/tsconfigs/strict"
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "types": [
+      "astro/client",
+      "vite-plugin-pwa/info",
+      "vite-plugin-pwa/client",
+      "vite-plugin-pwa"
+    ],
+  },
+  "exclude": ["dist", "dev-dist", "node_modules"]
 }
