Update package.json and managers

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 # Expose Astro dependencies for `pnpm` users
 shamefully-hoist=true
-lockfile-include-tarball-url=true
-recursive-install=false
+#recursive-install=false
+#auto-install-peers=true
