Update  to use custom vite-plugin-pwa package.

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 # Expose Astro dependencies for `pnpm` users
 shamefully-hoist=true
-#recursive-install=false
-#auto-install-peers=true
+recursive-install=false
+auto-install-peers=true
