Fix use custom vite-plugin-pwa package.

--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
 	"devDependencies": {
 		"@vite-pwa/astro": "^0.0.3"
 	},
-  "pnpm": {
-    "overrides": {
-      "vite-plugin-pwa": "link:./packages/vite-plugin-pwa"
-    }
+	"peerDependencies": {
+    "workbox-window": "^6.5.4"
   }
 }
