--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
 		"astro": "^2.0.14"
 	},
 	"devDependencies": {
-		"@vite-pwa/astro": "^0.0.3"
-	},
-	"peerDependencies": {
-    "workbox-window": "^6.5.4"
-  }
+		"@vite-pwa/astro": "^0.0.3",
+		"vite-plugin-pwa": "git+https://github.com/carlesbarreda/vite-plugin-pwa.git#astro2-git",
+		"vite": "^4.1.2"
+	}
 }
