--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	},
 	"devDependencies": {
 		"@vite-pwa/astro": "^0.0.3",
-		"vite-plugin-pwa": "git+https://github.com/carlesbarreda/vite-plugin-pwa.git#astro2-git",
+		"vite-plugin-pwa": "git+https://github.com/carlesbarreda/vite-plugin-pwa.git#astro2-integration",
 		"vite": "^4.1.2"
 	}
 }
