Update debug message

--- a/.github/workflows/deploy-gp.yml
+++ b/.github/workflows/deploy-gp.yml
@@ -38,12 +38,12 @@ jobs:
         with:
           path: ${{ env.BUILD_PATH }}
 
-      - name: Checkout vite-plugin-pwa
-        uses: actions/checkout@v3
-        with:
-          repository: carlesbarreda/vite-plugin-pwa
-          ref: astro2-integration
-          path: ${{ env.BUILD_PATH }}/packages/vite-plugin-pwa
+      #- name: Checkout vite-plugin-pwa
+      #  uses: actions/checkout@v3
+      #  with:
+      #    repository: carlesbarreda/vite-plugin-pwa
+      #    ref: astro2-integration
+      #    path: ${{ env.BUILD_PATH }}/packages/vite-plugin-pwa
 
       - name: Detect package manager
         id: detect-package-manager
@@ -122,13 +122,13 @@ jobs:
         id: pages
         uses: actions/configure-pages@v3
 
-      - name: Install vite-plugin-pwa dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-        working-directory: ${{ env.BUILD_PATH }}/packages/vite-plugin-pwa
+      #- name: Install vite-plugin-pwa dependencies
+      #  run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+      #  working-directory: ${{ env.BUILD_PATH }}/packages/vite-plugin-pwa
 
-      - name: Build vite-plugin-pwa dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} run build
-        working-directory: ${{ env.BUILD_PATH }}/packages/vite-plugin-pwa
+      #- name: Build vite-plugin-pwa dependencies
+      #  run: ${{ steps.detect-package-manager.outputs.manager }} run build
+      #  working-directory: ${{ env.BUILD_PATH }}/packages/vite-plugin-pwa
 
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
