--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"astro": "^2.0.14"
 	},
 	"devDependencies": {
-		"@vite-pwa/astro": "^0.0.3"
+		"@vite-pwa/astro": "^0.0.3",
+		"vite": "^4.1.2"
 	}
 }
