--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,13 +5,13 @@
 
 version: 2
 updates:
-  # Maintain dependencies for GitHub Actions
+  # Maintain dependencies for GitHub Actions.
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "dayly"
 
-  # Maintain dependencies for npm
+  # Maintain dependencies for npm.
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
